--- a/mail-client/mozilla-thunderbird/ChangeLog
+++ b/mail-client/mozilla-thunderbird/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for mail-client/mozilla-thunderbird
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/mail-client/mozilla-thunderbird/ChangeLog,v 1.204 2007/06/13 13:13:46 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/mail-client/mozilla-thunderbird/ChangeLog,v 1.205 2007/06/15 11:33:53 armin76 Exp $
+
+*mozilla-thunderbird-2.0.0.4 (15 Jun 2007)
+
+  15 Jun 2007; Raúl Porcel <armin76@gentoo.org>
+  +mozilla-thunderbird-2.0.0.4.ebuild:
+  Version bump wrt security #180436
 
   13 Jun 2007; Raúl Porcel <armin76@gentoo.org>
   mozilla-thunderbird-2.0.0.0.ebuild:
