--- a/mail-client/mozilla-thunderbird-bin/ChangeLog
+++ b/mail-client/mozilla-thunderbird-bin/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for mail-client/mozilla-thunderbird-bin
 # Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/mail-client/mozilla-thunderbird-bin/ChangeLog,v 1.78 2007/06/08 13:50:30 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/mail-client/mozilla-thunderbird-bin/ChangeLog,v 1.79 2007/06/15 11:41:33 armin76 Exp $
+
+*mozilla-thunderbird-bin-2.0.0.4 (15 Jun 2007)
+
+  15 Jun 2007; Raúl Porcel <armin76@gentoo.org>
+  +mozilla-thunderbird-bin-2.0.0.4.ebuild:
+  Version bump wrt security #180436
 
   08 Jun 2007; Raúl Porcel <armin76@gentoo.org>
   mozilla-thunderbird-bin-1.5.0.12.ebuild,
