--- a/media-sound/ecasound/ChangeLog
+++ b/media-sound/ecasound/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for media-sound/ecasound
-# Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-sound/ecasound/ChangeLog,v 1.38 2006/07/08 23:25:54 fvdpol Exp $
+# Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/media-sound/ecasound/ChangeLog,v 1.39 2007/06/15 12:22:23 drac Exp $
+
+*ecasound-2.4.5 (15 Jun 2007)
+
+  15 Jun 2007; Samuli Suominen <drac@gentoo.org> +ecasound-2.4.5.ebuild:
+  Version bump for bug 169371. Thanks to Risto Paju.
 
 *ecasound-2.4.4 (08 Jul 2006)
 
