--- a/app-misc/hal-info/ChangeLog
+++ b/app-misc/hal-info/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for app-misc/hal-info
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-misc/hal-info/ChangeLog,v 1.10 2007/04/16 17:30:40 uberlord Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-misc/hal-info/ChangeLog,v 1.11 2007/06/15 12:48:29 opfer Exp $
+
+  15 Jun 2007; Christian Faulhammer <opfer@gentoo.org>
+  hal-info-20070425.ebuild:
+  stable x86, bug 181317
 
   16 Apr 2007; Roy Marples <uberlord@gentoo.org> hal-info-20070402.ebuild:
   Blessed with the ~x86-fbsd keyword.
