--- a/sys-libs/libsmbios/ChangeLog
+++ b/sys-libs/libsmbios/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for sys-libs/libsmbios
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-libs/libsmbios/ChangeLog,v 1.7 2007/05/20 13:49:32 cedk Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-libs/libsmbios/ChangeLog,v 1.8 2007/06/15 12:53:56 opfer Exp $
+
+  15 Jun 2007; Christian Faulhammer <opfer@gentoo.org>
+  libsmbios-0.13.6.ebuild:
+  stable x86, bug 181317
 
   20 May 2007; Cédric Krier <cedk@gentoo.org> libsmbios-0.13.2.ebuild,
   libsmbios-0.13.6.ebuild:
