--- a/sys-apps/hal/ChangeLog
+++ b/sys-apps/hal/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for sys-apps/hal
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/hal/ChangeLog,v 1.183 2007/06/14 20:59:38 cardoe Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/hal/ChangeLog,v 1.184 2007/06/15 12:57:14 opfer Exp $
+
+  15 Jun 2007; Christian Faulhammer <opfer@gentoo.org> hal-0.5.9-r1.ebuild:
+  stable x86, bug 181317
 
   14 Jun 2007; Doug Goldstein <cardoe@gentoo.org>
   +files/0.5.9/98_hald_cache_test_path.patch, files/0.5.9/series,
