--- a/app-office/openoffice-bin/ChangeLog
+++ b/app-office/openoffice-bin/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for app-office/openoffice-bin
 # Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-office/openoffice-bin/ChangeLog,v 1.165 2007/06/12 14:08:38 suka Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-office/openoffice-bin/ChangeLog,v 1.166 2007/06/15 13:05:04 opfer Exp $
+
+  15 Jun 2007; Christian Faulhammer <opfer@gentoo.org>
+  openoffice-bin-2.2.1.ebuild:
+  stable x86, security bug 181773
 
 *openoffice-bin-2.2.1 (12 Jun 2007)
 
