--- a/sys-fs/sshfs-fuse/ChangeLog
+++ b/sys-fs/sshfs-fuse/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for sys-fs/sshfs-fuse
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-fs/sshfs-fuse/ChangeLog,v 1.30 2007/06/13 13:30:56 angelos Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-fs/sshfs-fuse/ChangeLog,v 1.31 2007/06/15 13:13:54 gustavoz Exp $
+
+  15 Jun 2007; Gustavo Zacarias <gustavoz@gentoo.org> sshfs-fuse-1.8.ebuild:
+  Stable on sparc
 
   13 Jun 2007; Christoph Mende <angelos@gentoo.org> sshfs-fuse-1.8.ebuild:
   Stable on amd64 wrt bug 181416
