--- a/sys-libs/libsmbios/ChangeLog
+++ b/sys-libs/libsmbios/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for sys-libs/libsmbios
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-libs/libsmbios/ChangeLog,v 1.8 2007/06/15 12:53:56 opfer Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-libs/libsmbios/ChangeLog,v 1.9 2007/06/15 13:32:56 angelos Exp $
+
+  15 Jun 2007; Christoph Mende <angelos@gentoo.org> libsmbios-0.13.6.ebuild:
+  Stable on amd64 wrt bug 181317
 
   15 Jun 2007; Christian Faulhammer <opfer@gentoo.org>
   libsmbios-0.13.6.ebuild:
