--- a/sys-apps/pciutils/ChangeLog
+++ b/sys-apps/pciutils/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for sys-apps/pciutils
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/pciutils/ChangeLog,v 1.104 2007/06/14 16:59:24 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/pciutils/ChangeLog,v 1.105 2007/06/15 13:35:56 angelos Exp $
+
+  15 Jun 2007; Christoph Mende <angelos@gentoo.org>
+  pciutils-2.2.4-r3.ebuild:
+  Stable on amd64 wrt bug 180554
 
   14 Jun 2007; Raúl Porcel <armin76@gentoo.org> pciutils-2.2.4-r3.ebuild:
   alpha/ia64 stable wrt #180554
