--- a/app-misc/hal-info/ChangeLog
+++ b/app-misc/hal-info/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for app-misc/hal-info
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-misc/hal-info/ChangeLog,v 1.11 2007/06/15 12:48:29 opfer Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-misc/hal-info/ChangeLog,v 1.12 2007/06/15 13:39:27 angelos Exp $
+
+  15 Jun 2007; Christoph Mende <angelos@gentoo.org>
+  hal-info-20070425.ebuild:
+  Stable on amd64 wrt bug 181317
 
   15 Jun 2007; Christian Faulhammer <opfer@gentoo.org>
   hal-info-20070425.ebuild:
