--- a/app-editors/emacs-cvs/ChangeLog
+++ b/app-editors/emacs-cvs/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for app-editors/emacs-cvs
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-editors/emacs-cvs/ChangeLog,v 1.138 2007/06/14 18:53:24 ulm Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-editors/emacs-cvs/ChangeLog,v 1.139 2007/06/15 14:17:06 ulm Exp $
+
+  15 Jun 2007; Ulrich Mueller <ulm@gentoo.org>
+  -files/emacs-cvs-temacs-prerequisite.patch, emacs-cvs-23.0.0-r6.ebuild:
+  Undo yesterday's change since today the patch is already applied upstream.
 
   14 Jun 2007; Ulrich Mueller <ulm@gentoo.org>
   +files/emacs-cvs-temacs-prerequisite.patch, emacs-cvs-23.0.0-r6.ebuild:
