--- a/media-libs/ftgl/ChangeLog
+++ b/media-libs/ftgl/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for media-libs/ftgl
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-libs/ftgl/ChangeLog,v 1.14 2007/02/27 02:45:38 the_paya Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-libs/ftgl/ChangeLog,v 1.15 2007/06/15 14:19:21 kumba Exp $
+
+  15 Jun 2007; Joshua Kinard <kumba@gentoo.org> ftgl-2.1.2-r1.ebuild:
+  Stable on mips.
 
   27 Feb 2007; Javier Villavicencio <the_paya@gentoo.org>
   ftgl-2.1.2-r1.ebuild:
