--- a/games-arcade/smclone/ChangeLog
+++ b/games-arcade/smclone/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for games-arcade/smclone
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/games-arcade/smclone/ChangeLog,v 1.17 2007/04/20 17:14:38 nyhm Exp $
+# $Header: /var/cvsroot/gentoo-x86/games-arcade/smclone/ChangeLog,v 1.18 2007/06/15 14:48:44 nyhm Exp $
+
+*smclone-0.99.7 (15 Jun 2007)
+
+  15 Jun 2007; Tristan Heaven <nyhm@gentoo.org> +smclone-0.99.7.ebuild:
+  Version bump
 
 *smclone-0.99.6 (20 Apr 2007)
 
