--- a/dev-util/devel-chroots/ChangeLog
+++ b/dev-util/devel-chroots/ChangeLog
@@ -1,10 +1,10 @@
 # ChangeLog for dev-util/devel-chroots
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-util/devel-chroots/ChangeLog,v 1.29 2007/06/15 14:53:30 pappy Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-util/devel-chroots/ChangeLog,v 1.30 2007/06/15 15:25:22 pappy Exp $
 
   15 Jun 2007; Alexander Gabert <pappy@gentoo.org>
   +devel-chroots-2.1.0.ebuild:
-  --help
+  marking ~arch on x86 and amd64
 
 *devel-chroots-2.1.0 (15 Jun 2007)
 
