--- a/dev-java/jcifs/ChangeLog
+++ b/dev-java/jcifs/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for dev-java/jcifs
 # Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-java/jcifs/ChangeLog,v 1.12 2007/06/15 14:49:58 angelos Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-java/jcifs/ChangeLog,v 1.13 2007/06/15 15:49:17 caster Exp $
+
+  15 Jun 2007; Vlastimil Babka <caster@gentoo.org> -files/build-xml.patch,
+  -jcifs-1.1.5.ebuild:
+  Gen-1 punt.
 
   15 Jun 2007; Christoph Mende <angelos@gentoo.org> jcifs-1.2.13.ebuild:
   Stable on amd64 wrt bug 180363
