--- a/net-misc/neon/ChangeLog
+++ b/net-misc/neon/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for net-misc/neon
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-misc/neon/ChangeLog,v 1.85 2007/06/14 18:35:00 angelos Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-misc/neon/ChangeLog,v 1.86 2007/06/15 15:49:21 armin76 Exp $
+
+  15 Jun 2007; Raúl Porcel <armin76@gentoo.org> neon-0.26.3.ebuild:
+  alpha/ia64/x86 stable wrt #178264
 
   14 Jun 2007; Christoph Mende <angelos@gentoo.org> neon-0.26.3.ebuild:
   Stable on amd64 wrt bug 178264
