--- a/dev-util/subversion/ChangeLog
+++ b/dev-util/subversion/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-util/subversion
 # Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-util/subversion/ChangeLog,v 1.263 2007/06/15 09:09:34 phreak Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-util/subversion/ChangeLog,v 1.264 2007/06/15 15:54:56 armin76 Exp $
+
+  15 Jun 2007; Raúl Porcel <armin76@gentoo.org> subversion-1.3.2-r4.ebuild:
+  alpha/ia64/x86 stable wrt #178264
 
   15 Jun 2007; Christian Heim <phreak@gentoo.org>
   subversion-1.4.3-r1.ebuild, subversion-1.4.4.ebuild:
