--- a/sys-apps/memtester/ChangeLog
+++ b/sys-apps/memtester/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for sys-apps/memtester
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/memtester/ChangeLog,v 1.20 2007/06/14 19:46:52 dertobi123 Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/memtester/ChangeLog,v 1.21 2007/06/15 16:11:40 angelos Exp $
+
+  15 Jun 2007; Christoph Mende <angelos@gentoo.org> memtester-4.0.5.ebuild:
+  Stable on amd64 wrt bug 181966
 
   14 Jun 2007; Tobias Scherbaum <dertobi123@gentoo.org>
   memtester-4.0.5.ebuild:
