--- a/app-crypt/pinentry/ChangeLog
+++ b/app-crypt/pinentry/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for app-crypt/pinentry
 # Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-crypt/pinentry/ChangeLog,v 1.60 2007/04/24 20:11:55 swegener Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-crypt/pinentry/ChangeLog,v 1.61 2007/06/15 16:25:32 alonbl Exp $
+
+*pinentry-0.7.2-r4 (15 Jun 2007)
+
+  15 Jun 2007; Alon Bar-Lev <alonbl@gentoo.org>
+  +files/pinentry-0.7.2-grab.patch, +pinentry-0.7.2-r4.ebuild:
+  Fix gtk2+ grab issue, bug#165493, thanks to Vincent Pit
 
   24 Apr 2007; Sven Wegener <swegener@gentoo.org> -pinentry-0.7.2-r2.ebuild:
   Cleanup.
