--- a/x11-plugins/enigmail/ChangeLog
+++ b/x11-plugins/enigmail/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for x11-plugins/enigmail
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-plugins/enigmail/ChangeLog,v 1.70 2007/06/07 09:47:10 corsair Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-plugins/enigmail/ChangeLog,v 1.71 2007/06/15 17:25:54 armin76 Exp $
+
+  15 Jun 2007; Raúl Porcel <armin76@gentoo.org> enigmail-0.95.0.ebuild:
+  alpha stable wrt #178983
 
   07 Jun 2007; Markus Rothe <corsair@gentoo.org> enigmail-0.95.0.ebuild:
   Stable on ppc64; bug #178983
