--- a/x11-plugins/replytolist/ChangeLog
+++ b/x11-plugins/replytolist/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for x11-plugins/replytolist
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-plugins/replytolist/ChangeLog,v 1.13 2007/06/07 09:40:56 corsair Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-plugins/replytolist/ChangeLog,v 1.14 2007/06/15 17:26:55 armin76 Exp $
+
+  15 Jun 2007; Raúl Porcel <armin76@gentoo.org> replytolist-0.2.0.ebuild:
+  alpha stable wrt #178983
 
   07 Jun 2007; Markus Rothe <corsair@gentoo.org> replytolist-0.2.0.ebuild:
   Stable on ppc64; bug #178983
