--- a/media-libs/libquicktime/ChangeLog
+++ b/media-libs/libquicktime/ChangeLog
@@ -1,6 +1,13 @@
 # ChangeLog for media-libs/libquicktime
 # Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-libs/libquicktime/ChangeLog,v 1.87 2007/05/16 15:23:56 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-libs/libquicktime/ChangeLog,v 1.88 2007/06/15 17:39:23 aballier Exp $
+
+  15 Jun 2007; Alexis Ballier <aballier@gentoo.org>
+  -files/libquicktime-0.9.2-amd64.patch, -files/libquicktime-new-x264.patch,
+  -files/libquicktime-0.9.4-cflags.patch, -libquicktime-0.9.2.ebuild,
+  -libquicktime-0.9.4.ebuild, -libquicktime-0.9.9.ebuild,
+  -libquicktime-0.9.9-r1.ebuild:
+  Cleanup old and unused versions
 
   16 May 2007; Raúl Porcel <armin76@gentoo.org> libquicktime-0.9.10.ebuild:
   alpha stable wrt #157892
