--- a/dev-libs/apr-util/ChangeLog
+++ b/dev-libs/apr-util/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for dev-libs/apr-util
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/apr-util/ChangeLog,v 1.82 2007/06/15 15:46:33 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/apr-util/ChangeLog,v 1.83 2007/06/15 17:59:22 hollow Exp $
+
+*apr-util-1.2.8-r1 (15 Jun 2007)
+
+  15 Jun 2007; Benedikt Böhm <hollow@gentoo.org> +apr-util-1.2.8-r1.ebuild:
+  fix #127781 (mysql support)
 
   15 Jun 2007; Raúl Porcel <armin76@gentoo.org> apr-util-1.2.8.ebuild:
   alpha/ia64/x86 stable wrt #178264
