--- a/games-strategy/wesnoth/ChangeLog
+++ b/games-strategy/wesnoth/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for games-strategy/wesnoth
 # Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/games-strategy/wesnoth/ChangeLog,v 1.91 2007/04/16 04:57:17 mr_bones_ Exp $
+# $Header: /var/cvsroot/gentoo-x86/games-strategy/wesnoth/ChangeLog,v 1.92 2007/06/15 18:20:23 mr_bones_ Exp $
+
+*wesnoth-1.2.5 (15 Jun 2007)
+
+  15 Jun 2007; Michael Sterrett <mr_bones_@gentoo.org>
+  +wesnoth-1.2.5.ebuild:
+  version bump
 
 *wesnoth-1.2.4 (16 Apr 2007)
 
