--- a/net-www/mod_security/ChangeLog
+++ b/net-www/mod_security/ChangeLog
@@ -1,6 +1,14 @@
 # ChangeLog for net-www/mod_security
 # Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-www/mod_security/ChangeLog,v 1.25 2007/05/11 14:53:17 beandog Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-www/mod_security/ChangeLog,v 1.26 2007/06/15 18:21:47 hollow Exp $
+
+*mod_security-2.1.1-r1 (15 Jun 2007)
+
+  15 Jun 2007; Benedikt Böhm <hollow@gentoo.org>
+  +files/mod_security-2.1.1-request_interception.patch,
+  -files/99_mod_security.conf, -mod_security-1.8.7.ebuild,
+  -mod_security-1.9.4.ebuild, +mod_security-2.1.1-r1.ebuild:
+  remove apache-1 version; fix #180150
 
   11 May 2007; Steve Dibb <beandog@gentoo.org> mod_security-2.1.1.ebuild:
   amd64 stable, security bug 169778
