--- a/dev-libs/libpcre/ChangeLog
+++ b/dev-libs/libpcre/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-libs/libpcre
 # Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/libpcre/ChangeLog,v 1.94 2007/06/13 06:33:54 corsair Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/libpcre/ChangeLog,v 1.95 2007/06/15 18:28:05 dang Exp $
+
+  15 Jun 2007; Daniel Gryniewicz <dang@gentoo.org> libpcre-7.1.ebuild:
+  Marked ~amd64 for bug #181670
 
   13 Jun 2007; Markus Rothe <corsair@gentoo.org> libpcre-7.1.ebuild:
   Added ~ppc64; bug #181670
