--- a/x11-misc/basket/ChangeLog
+++ b/x11-misc/basket/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for x11-misc/basket
 # Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-misc/basket/ChangeLog,v 1.35 2007/06/14 13:11:06 drac Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-misc/basket/ChangeLog,v 1.36 2007/06/15 18:30:25 dang Exp $
+
+  15 Jun 2007; Daniel Gryniewicz <dang@gentoo.org> basket-1.0.2.ebuild:
+  Marked stable on amd64 for bug #181639
 
   14 Jun 2007; Samuli Suominen <drac@gentoo.org> metadata.xml:
   KDE package.
