--- a/media-video/griffith/ChangeLog
+++ b/media-video/griffith/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for media-video/griffith
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-video/griffith/ChangeLog,v 1.5 2007/05/05 11:40:15 nelchael Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-video/griffith/ChangeLog,v 1.6 2007/06/15 18:33:23 dang Exp $
+
+  15 Jun 2007; Daniel Gryniewicz <dang@gentoo.org> griffith-0.9.2.ebuild:
+  Marked stable on amd64 for bug #177157
 
   05 May 2007; Krzysiek Pawlik <nelchael@gentoo.org> -griffith-0.6.2.ebuild:
   Remove old version.
