--- a/dev-python/sqlalchemy/ChangeLog
+++ b/dev-python/sqlalchemy/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-python/sqlalchemy
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/sqlalchemy/ChangeLog,v 1.11 2007/06/03 18:44:36 lucass Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/sqlalchemy/ChangeLog,v 1.12 2007/06/15 18:35:09 dang Exp $
+
+  15 Jun 2007; Daniel Gryniewicz <dang@gentoo.org> sqlalchemy-0.3.7.ebuild:
+  Marked stable on amd64 for bug #178027
 
 *sqlalchemy-0.3.8 (03 Jun 2007)
 
