--- a/media-video/griffith/ChangeLog
+++ b/media-video/griffith/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for media-video/griffith
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-video/griffith/ChangeLog,v 1.6 2007/06/15 18:33:23 dang Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-video/griffith/ChangeLog,v 1.7 2007/06/15 18:39:16 dang Exp $
+
+  15 Jun 2007; Daniel Gryniewicz <dang@gentoo.org> griffith-0.9.2.ebuild:
+  Marked ~amd64 Oops, sqlalchemy not stable; fricken repoman
 
   15 Jun 2007; Daniel Gryniewicz <dang@gentoo.org> griffith-0.9.2.ebuild:
   Marked stable on amd64 for bug #177157
