--- a/x11-libs/cairo/ChangeLog
+++ b/x11-libs/cairo/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for x11-libs/cairo
 # Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-libs/cairo/ChangeLog,v 1.130 2007/06/14 14:21:20 dang Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-libs/cairo/ChangeLog,v 1.131 2007/06/15 19:00:22 cardoe Exp $
+
+  15 Jun 2007; Doug Goldstein <cardoe@gentoo.org> cairo-1.4.8.ebuild:
+  Add support for using libglitz-glx instead of plain libglitz via USE='glitz
+  opengl'
 
   14 Jun 2007; Daniel Gryniewicz <dang@gentoo.org> cairo-1.4.6.ebuild:
   Marked stable on amd64 for bug #176367
