--- a/net-www/apache/ChangeLog
+++ b/net-www/apache/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for net-www/apache
 # Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-www/apache/ChangeLog,v 1.535 2007/06/13 14:20:19 chtekk Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-www/apache/ChangeLog,v 1.536 2007/06/15 19:05:48 hollow Exp $
+
+*apache-2.2.4-r7 (15 Jun 2007)
+
+  15 Jun 2007; Benedikt Böhm <hollow@gentoo.org> +apache-2.2.4-r7.ebuild:
+  fix #178966
 
   13 Jun 2007; Luca Longinotti <chtekk@gentoo.org>
   -apache-1.3.34-r14.ebuild, -apache-1.3.37.ebuild:
