--- a/app-portage/eix/ChangeLog
+++ b/app-portage/eix/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for app-portage/eix
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-portage/eix/ChangeLog,v 1.169 2007/06/15 12:38:37 genstef Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-portage/eix/ChangeLog,v 1.170 2007/06/15 19:37:20 malc Exp $
+
+  15 Jun 2007; <malc@gentoo.org> eix-0.9.9.ebuild:
+  Remove unneeded patch - per direction of upstream. bug #182150
 
 *eix-0.9.9 (15 Jun 2007)
 
