--- a/sys-apps/hal/ChangeLog
+++ b/sys-apps/hal/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for sys-apps/hal
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/hal/ChangeLog,v 1.185 2007/06/15 13:36:34 angelos Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/hal/ChangeLog,v 1.186 2007/06/15 19:59:31 dertobi123 Exp $
+
+  15 Jun 2007; Tobias Scherbaum <dertobi123@gentoo.org> hal-0.5.9-r1.ebuild:
+  ppc stable, bug #181317
 
   15 Jun 2007; Christoph Mende <angelos@gentoo.org> hal-0.5.9-r1.ebuild:
   Stable on amd64 wrt bug 181317
