--- a/media-video/camsource/ChangeLog
+++ b/media-video/camsource/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for media-video/camsource
 # Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-video/camsource/ChangeLog,v 1.18 2007/06/14 10:44:25 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-video/camsource/ChangeLog,v 1.19 2007/06/15 20:01:10 dertobi123 Exp $
+
+  15 Jun 2007; Tobias Scherbaum <dertobi123@gentoo.org>
+  camsource-0.7.1.ebuild:
+  ppc stable, bug #181930
 
   14 Jun 2007; Raúl Porcel <armin76@gentoo.org> camsource-0.5.1.ebuild:
   Drop ~alpha keyword
