--- a/dev-db/sqlite/ChangeLog
+++ b/dev-db/sqlite/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for dev-db/sqlite
 # Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-db/sqlite/ChangeLog,v 1.154 2007/06/15 12:53:55 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-db/sqlite/ChangeLog,v 1.155 2007/06/15 20:06:13 dertobi123 Exp $
+
+  15 Jun 2007; Tobias Scherbaum <dertobi123@gentoo.org>
+  sqlite-3.3.17.ebuild:
+  ppc stable, bug #182013
 
   15 Jun 2007; Raúl Porcel <armin76@gentoo.org> sqlite-3.3.17.ebuild:
   ia64 stable wrt #182013
