--- a/dev-perl/Shell-EnvImporter/ChangeLog
+++ b/dev-perl/Shell-EnvImporter/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for dev-perl/Shell-EnvImporter
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/Shell-EnvImporter/ChangeLog,v 1.10 2007/04/14 14:07:00 mcummings Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/Shell-EnvImporter/ChangeLog,v 1.11 2007/06/15 20:08:31 armin76 Exp $
+
+  15 Jun 2007; Raúl Porcel <armin76@gentoo.org>
+  Shell-EnvImporter-1.04.ebuild:
+  Add ~alpha wrt #173021
 
   14 Apr 2007; Michael Cummings <mcummings@gentoo.org>
   Shell-EnvImporter-1.04.ebuild:
