--- a/mail-filter/gld/ChangeLog
+++ b/mail-filter/gld/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for mail-filter/gld
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/mail-filter/gld/ChangeLog,v 1.36 2007/06/11 05:46:57 opfer Exp $
+# $Header: /var/cvsroot/gentoo-x86/mail-filter/gld/ChangeLog,v 1.37 2007/06/15 20:09:09 dertobi123 Exp $
+
+  15 Jun 2007; Tobias Scherbaum <dertobi123@gentoo.org> ChangeLog:
+  ppc stable, bug #160067
 
   11 Jun 2007; Christian Faulhammer <opfer@gentoo.org> gld-1.7.ebuild:
   stable x86, bug 160067
