--- a/dev-python/python-ldap/ChangeLog
+++ b/dev-python/python-ldap/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-python/python-ldap
 # Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/python-ldap/ChangeLog,v 1.53 2007/04/02 19:28:02 dertobi123 Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/python-ldap/ChangeLog,v 1.54 2007/06/15 20:10:52 armin76 Exp $
+
+  15 Jun 2007; Raúl Porcel <armin76@gentoo.org> python-ldap-2.2.1.ebuild:
+  alpha stable wrt #172535
 
   02 Apr 2007; Tobias Scherbaum <dertobi123@gentoo.org>
   python-ldap-2.2.1.ebuild:
