--- a/dev-ruby/ruby-gd/ChangeLog
+++ b/dev-ruby/ruby-gd/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-ruby/ruby-gd
 # Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/ruby-gd/ChangeLog,v 1.14 2007/06/14 05:56:48 corsair Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/ruby-gd/ChangeLog,v 1.15 2007/06/15 20:16:29 dang Exp $
+
+  15 Jun 2007; Daniel Gryniewicz <dang@gentoo.org> ruby-gd-0.7.4-r1.ebuild:
+  Marked stable on amd64 for bug #181688
 
   14 Jun 2007; Markus Rothe <corsair@gentoo.org> ruby-gd-0.7.4-r1.ebuild:
   Stable on ppc64; bug #181688
