--- a/dev-ruby/cgi_multipart_eof_fix/ChangeLog
+++ b/dev-ruby/cgi_multipart_eof_fix/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for dev-ruby/cgi_multipart_eof_fix
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/cgi_multipart_eof_fix/ChangeLog,v 1.17 2007/06/15 15:49:48 angelos Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/cgi_multipart_eof_fix/ChangeLog,v 1.18 2007/06/15 20:20:34 dertobi123 Exp $
+
+  15 Jun 2007; Tobias Scherbaum <dertobi123@gentoo.org>
+  cgi_multipart_eof_fix-2.1.ebuild:
+  ppc stable, bug #181110
 
   15 Jun 2007; Christoph Mende <angelos@gentoo.org>
   cgi_multipart_eof_fix-2.1.ebuild:
