--- a/dev-python/qscintilla/ChangeLog
+++ b/dev-python/qscintilla/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for dev-python/qscintilla
 # Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/qscintilla/ChangeLog,v 1.72 2007/06/15 18:42:27 flameeyes Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/qscintilla/ChangeLog,v 1.73 2007/06/15 20:42:26 flameeyes Exp $
+
+  15 Jun 2007; Diego Pettenò <flameeyes@gentoo.org>
+  qscintilla-1.7.1.ebuild:
+  Add ~x86-fbsd keyword.
 
   15 Jun 2007; Diego Pettenò <flameeyes@gentoo.org>
   qscintilla-1.7.1.ebuild:
