--- a/dev-util/eclipse-sdk/ChangeLog
+++ b/dev-util/eclipse-sdk/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for dev-util/eclipse-sdk
 # Copyright 2003-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-util/eclipse-sdk/ChangeLog,v 1.131 2007/05/28 23:58:39 caster Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-util/eclipse-sdk/ChangeLog,v 1.132 2007/06/15 20:48:09 dertobi123 Exp $
+
+  15 Jun 2007; Tobias Scherbaum <dertobi123@gentoo.org>
+  eclipse-sdk-3.2.1-r2.ebuild:
+  ppc stable, bug #176856
 
   28 May 2007; Vlastimil Babka <caster@gentoo.org> -files/eclipse-2.desktop,
   -files/eclipse-3, -files/04-amd64-gtk.patch, -files/eclipse-3.0.2,
