--- a/dev-java/javahelp/ChangeLog
+++ b/dev-java/javahelp/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for dev-java/javahelp
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-java/javahelp/ChangeLog,v 1.10 2007/06/10 10:49:51 philantrop Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-java/javahelp/ChangeLog,v 1.11 2007/06/15 20:51:07 dertobi123 Exp $
+
+  15 Jun 2007; Tobias Scherbaum <dertobi123@gentoo.org>
+  javahelp-2.0.02_p46.ebuild:
+  ppc stable, bug #176971
 
   10 Jun 2007; Wulf C. Krueger <philantrop@gentoo.org>
   javahelp-2.0.02_p46.ebuild:
