--- a/net-nds/jxplorer/ChangeLog
+++ b/net-nds/jxplorer/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for net-nds/jxplorer
 # Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-nds/jxplorer/ChangeLog,v 1.21 2007/06/10 12:23:10 caster Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-nds/jxplorer/ChangeLog,v 1.22 2007/06/15 20:54:00 dertobi123 Exp $
+
+  15 Jun 2007; Tobias Scherbaum <dertobi123@gentoo.org>
+  jxplorer-3.1-r5.ebuild:
+  ppc stable, bug #176971
 
   10 Jun 2007; Vlastimil Babka <caster@gentoo.org> -files/jxplorer.sh,
   -files/jxplorer-log4j.patch, -files/jxplorer-pre, -jxplorer-3.1-r1.ebuild,
