--- a/dev-php5/php-qt/ChangeLog
+++ b/dev-php5/php-qt/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-php5/php-qt
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-php5/php-qt/ChangeLog,v 1.5 2007/03/18 02:09:47 chtekk Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-php5/php-qt/ChangeLog,v 1.6 2007/06/15 20:57:20 anant Exp $
+
+  15 Jun 2007; Anant Narayanan <anant@gentoo.org> php-qt-0.0.3.ebuild:
+  Add depedency on libXinerama, closes bug #178926
 
   18 Mar 2007; Luca Longinotti <chtekk@gentoo.org> -php-qt-0.0.2.ebuild,
   php-qt-0.0.3.ebuild:
